syntax = "proto3";

option java_package = "viach.apps.cache";
option java_multiple_files = true;

message StatsPreferences {
  int32 easyModeWinsCount = 1;
  int32 normalModeWinsCount = 2;
  int32 hardModeWinsCount = 3;
  int32 easyModeLossesCount = 4;
  int32 normalModeLossesCount = 5;
  int32 hardModeLossesCount = 6;

  int32 easyModeHighestScore = 7;
  int32 normalModeHighestScore = 8;
  int32 hardModeHighestScore = 9;
}

message SavedGame {
  repeated int32 playerOneField = 1;
  repeated int32 playerTwoField = 2;
  string aiDifficulty = 3;
  bool hasSavedGame = 4;
  int32 turn = 5;
  int32 nextDice = 6;
}

message SettingsPreferences {
  SystemThemeMode mode = 1;
  bool useDifficultyDialog = 2;
  int32 themeIndex = 3;
}

enum SystemThemeMode {
  FollowSystem = 0;
  Day = 1;
  Night = 2;
}